hphp/hack/test/typecheck/akempty_promotion_15.php.exp
File "akempty_promotion_15.php", line 8, characters 10-11:
Invalid return type (Typing[4110])
File "akempty_promotion_15.php", line 3, characters 25-37:
Expected varray<string>
File "akempty_promotion_15.php", line 6, characters 5-9:
But got darray<int, string> because it is used as map here
